--- a/AccounterApplication.Web/Views/Expenses/EditExpense.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/EditExpense.cshtml
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group">
             <label asp-for="ExpenseAmount"></label>
-            <input asp-for="ExpenseAmount" class="form-control" />
+            <input asp-for="ExpenseAmount" class="form-control" data-val="false" />
             <span asp-validation-for="ExpenseAmount" class="text-danger"></span>
         </div>
         <div class="form-group">
