--- a/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
@@ -1,5 +1,7 @@
 ﻿@using AccounterApplication.Web.Controllers
+@using AccounterApplication.Common.GlobalConstants
 @using AccounterApplication.Web.ViewModels.MonthlyIncomes
+
 @using Resources = AccounterApplication.Common.LocalizationResources.Views.MonthlyIncomes.IncomesViewsResources;
 
 @model MonthlyIncomeInputModel
@@ -26,9 +28,9 @@
             <input asp-for="IncomePeriod" class="form-control" />
             <span asp-validation-for="IncomePeriod" class="text-danger"></span>
         </div>
-        <div class="modal-footer">
-            <input type="submit" value="@ButtonsResources.Add" class="btn btn-primary" />
-        </div>
+        <hr />
+        <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonSubmit" value="@ButtonsResources.Add" class="btn btn-primary btn-outline-dark" />
+        <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonCancel" value=@ButtonsResources.Cancel class="btn btn-light btn-outline-dark" />
     </form>
 </div>
 
