--- a/AccounterApplication.Web/Views/Incomes/EditMonthlyIncome.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/EditMonthlyIncome.cshtml
@@ -1,5 +1,7 @@
 ﻿@using AccounterApplication.Web.Controllers
+@using AccounterApplication.Common.GlobalConstants
 @using AccounterApplication.Web.ViewModels.MonthlyIncomes
+
 @using Resources = AccounterApplication.Common.LocalizationResources.Views.MonthlyIncomes.IncomesViewsResources
 
 @model MonthlyIncomeInputModel
@@ -21,7 +23,7 @@
         </div>
         <div class="form-group">
             <label asp-for="Amount"></label>
-            <input asp-for="Amount" class="form-control" />
+            <input asp-for="Amount" class="form-control" data-val="false" />
             <span asp-validation-for="Amount" class="text-danger"></span>
         </div>
         <div class="form-group">
@@ -29,9 +31,9 @@
             <input asp-for="IncomePeriod" class="form-control" />
             <span asp-validation-for="IncomePeriod" class="text-danger"></span>
         </div>
-        <div class="modal-footer">
-            <input type="submit" value="@ButtonsResources.Update" class="btn btn-primary" />
-        </div>
+        <hr />
+        <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonSubmit" value="@ButtonsResources.Update" class="btn btn-primary btn-outline-dark" />
+        <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonCancel" value=@ButtonsResources.Cancel class="btn btn-light btn-outline-dark" />
     </form>
 </div>
 
