--- a/AccounterApplication.Web/Views/Incomes/EditMonthlyIncome.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/EditMonthlyIncome.cshtml
@@ -22,6 +22,9 @@
             <input asp-for="Id" type="hidden" />
         </div>
         <div class="form-group">
+            <input asp-for="ComponentId" type="hidden" />
+        </div>
+        <div class="form-group">
             <label asp-for="Amount"></label>
             <input asp-for="Amount" class="form-control" data-val="false" />
             <span asp-validation-for="Amount" class="text-danger"></span>
@@ -30,6 +33,11 @@
             <label asp-for="IncomePeriod"></label>
             <input asp-for="IncomePeriod" class="form-control" />
             <span asp-validation-for="IncomePeriod" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ComponentName"></label>
+            <input asp-for="ComponentName" class="form-control" disabled />
+            <span asp-validation-for="ComponentName" class="text-danger"></span>
         </div>
         <hr />
         <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonSubmit" value="@ButtonsResources.Update" class="btn btn-primary btn-outline-dark" />
