--- a/AccounterApplication.Web/Views/Incomes/Index.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/Index.cshtml
@@ -31,6 +31,11 @@
                             <i class="fa fa-sort" aria-hidden="true"></i>
                         </a>
                     </th>
+                    <th scope="col">
+                        <div class="th-unsortable">
+                            @Resources.Component
+                        </div>
+                    </th>
                     <th scope="col"></th>
                 </tr>
             </thead>
