--- a/AccounterApplication.Web/Views/Incomes/_MonthlyIncomesTableBodyPartial.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/_MonthlyIncomesTableBodyPartial.cshtml
@@ -8,6 +8,7 @@
     <tr class="text-gray-800">
         <td class="cell-clickable-edit pointer" data-url="@Url.Action(nameof(IncomesController.EditMonthlyIncome), nameof(IncomesController).Replace(nameof(Controller), string.Empty))" data-id="@income.Id">@income.IncomePeriod</td>
         <td class="cell-clickable-edit pointer" data-url="@Url.Action(nameof(IncomesController.EditMonthlyIncome), nameof(IncomesController).Replace(nameof(Controller), string.Empty))" data-id="@income.Id">@income.Amount</td>
+        <td class="cell-clickable-edit pointer" data-url="@Url.Action(nameof(IncomesController.EditMonthlyIncome), nameof(IncomesController).Replace(nameof(Controller), string.Empty))" data-id="@income.Id">@income.ComponentName</td>
         <td>
             <a href="#" class="btn btn-no-shadow trigger-delete"
                data-id="@income.Id"
