Fix in expenses

--- a/AccounterApplication.Web/Views/Expenses/Index.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/Index.cshtml
@@ -54,6 +54,11 @@
                         </div>
 
                     </th>
+                    <th scope="col">
+                        <div class="th-unsortable">
+                            @Resources.Component
+                        </div>
+                    </th>
                     <th scope="col"></th>
                 </tr>
             </thead>
