--- a/AccounterApplication.Web/Views/Expenses/AddExpense.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/AddExpense.cshtml
@@ -28,16 +28,20 @@
             <span asp-validation-for="ExpenseAmount" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="DateOfExpense"></label>
-            <input asp-for="DateOfExpense" class="form-control" />
-            <span asp-validation-for="DateOfExpense" class="text-danger"></span>
+            <label asp-for="ExpenseDate"></label>
+            <input asp-for="ExpenseDate" class="form-control" />
+            <span asp-validation-for="ExpenseDate" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="ExpenseGroupId"></label>
             <select asp-for="ExpenseGroupId" class="form-control" asp-items="Model.ExpenseGroupListItems"></select>
             <span asp-validation-for="ExpenseGroupId" class="text-danger"></span>
         </div>
-
+        <div class="form-group">
+            <label asp-for="ComponentId"></label>
+            <select asp-for="ComponentId" class="form-control" asp-items="Model.ComponentsSelectListItems"></select>
+            <span asp-validation-for="ComponentId" class="text-danger"></span>
+        </div>
         <hr />
         <input type="submit" value=@ButtonsResources.Add class="btn btn-primary btn-outline-dark" />
     </form>
