--- a/AccounterApplication.Web/Views/Expenses/EditExpense.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/EditExpense.cshtml
@@ -30,9 +30,14 @@
             <span asp-validation-for="ExpenseAmount" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="DateOfExpense"></label>
-            <input asp-for="DateOfExpense" class="form-control" />
-            <span asp-validation-for="DateOfExpense" class="text-danger"></span>
+            <label asp-for="ExpenseDate"></label>
+            <input asp-for="ExpenseDate" class="form-control" />
+            <span asp-validation-for="ExpenseDate" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ComponentName"></label>
+            <input asp-for="ComponentName" class="form-control" disabled/>
+            <span asp-validation-for="ComponentName" class="text-danger"></span>
         </div>
         <hr class="my-4" />
         <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonSubmit" value=@ButtonsResources.Update class="btn btn-primary btn-outline-dark" />
