--- a/AccounterApplication.Web/Views/UserDashboard/Index.cshtml
+++ b/AccounterApplication.Web/Views/UserDashboard/Index.cshtml
@@ -1,11 +1,14 @@
-﻿@using AccounterApplication.Web.ViewModels.UserDashboard
-
+﻿@using AccounterApplication.Web.Controllers
+@using AccounterApplication.Web.ViewModels.UserDashboard
 @using Resources = AccounterApplication.Common.LocalizationResources.Views.UserDashboard.UserDashboardResources
 
 @model UserDashboardViewModel
 
 @{
     ViewData["Title"] = Resources.Dashboard;
+
+    string lastExpensesActionUrl = Url.Action(nameof(UserDashboardController.GetLastExpensesByCount),
+        nameof(UserDashboardController).Replace(nameof(Controller), string.Empty));
 }
 
 <div class="row mb-5">
@@ -19,6 +22,32 @@
 </div>
 <div class="row">
     <div class="col-xl-12 col-lg-7">
-        <partial name="_UserDashboardLastExpensesPartial" />
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">@Resources.LastExpenses</h6>
+            </div>
+            <div class="card-body card-body-last-expenses">
+                <partial name="_UserDashboardLastExpensesPartial" model="@Model.Expenses" />
+            </div>
+            <div class="card-footer py-3">
+                <div class="dropdown dropright">
+                    <button class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split m-0" type="button" 
+                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        @($"{Resources.Results}: {Model.Expenses.Count()}")
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item dropdown-item-toggle-expense-paging" href="#" data-url="@lastExpensesActionUrl" data-count="5">5</a>
+                        <a class="dropdown-item dropdown-item-toggle-expense-paging" href="#" data-url="@lastExpensesActionUrl" data-count="10">10</a>
+                        <a class="dropdown-item dropdown-item-toggle-expense-paging" href="#" data-url="@lastExpensesActionUrl" data-count="20">20</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+
+@section Scripts
+{
+    <script src="~/js/dashboard-functions.js" type="text/javascript" asp-append-version="true"></script>
+}
