--- a/AccounterApplication.Web/Views/Expenses/EditExpense.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/EditExpense.cshtml
@@ -3,7 +3,7 @@
 @using AccounterApplication.Web.ViewModels.Expenses
 @using Resources = AccounterApplication.Common.LocalizationResources.Views.Expenses.ExpensesViewsResources;
 
-@model ExpenseInputModel
+@model ExpenseEditInputModel
 @{
     ViewData["Title"] = Resources.EditExpense;
 }
@@ -25,9 +25,7 @@
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="ExpenseAmount"></label>
-            <input asp-for="ExpenseAmount" class="form-control" data-val="false" />
-            <span asp-validation-for="ExpenseAmount" class="text-danger"></span>
+            <input asp-for="ExpenseAmount" class="form-control" data-val="false" hidden />
         </div>
         <div class="form-group">
             <label asp-for="ExpenseDate"></label>
@@ -35,8 +33,13 @@
             <span asp-validation-for="ExpenseDate" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="ExpenseGroupId"></label>
+            <select asp-for="ExpenseGroupId" class="form-control" asp-items="Model.ExpenseGroupListItems"></select>
+            <span asp-validation-for="ExpenseGroupId" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label asp-for="ComponentName"></label>
-            <input asp-for="ComponentName" class="form-control" disabled/>
+            <input asp-for="ComponentName" class="form-control" disabled />
             <span asp-validation-for="ComponentName" class="text-danger"></span>
         </div>
         <hr class="my-4" />
