--- a/AccounterApplication.Web/Areas/Administration/Views/Users/Index.cshtml
+++ b/AccounterApplication.Web/Areas/Administration/Views/Users/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="row mb-5">
+    <div class="col">
+        <h1 class="text-gray-800">@ViewData["Title"]</h1>
+    </div>
+</div>
 
