--- a/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
@@ -34,8 +34,7 @@
             <span asp-validation-for="ComponentId" class="text-danger"></span>
         </div>
         <hr />
-        <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonSubmit" value="@ButtonsResources.Add" class="btn btn-primary btn-outline-dark" />
-        <input type="submit" asp-route-submitType="@ButtonValueConstants.ButtonCancel" value=@ButtonsResources.Cancel class="btn btn-light btn-outline-dark" />
+        <input type="submit" value="@ButtonsResources.Add" class="btn btn-primary btn-outline-dark" />
     </form>
 </div>
 
